--- a/plugin.xml
+++ b/plugin.xml
@@ -35,12 +35,12 @@
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application/activity">
             <intent-filter>
-                <action android:name="cl.proindar.mobile.ACTION_DECODE_DATA" />
+                <action android:name="cl.arrigoni.mobile.ACTION_DECODE_DATA" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <receiver android:name="BarcodeReceiverProindar">
                 <intent-filter>
-                    <action android:name="cl.proindar.mobile.ACTION_DECODE_DATA" /> 
+                    <action android:name="cl.arrigoni.mobile.ACTION_DECODE_DATA" /> 
                 </intent-filter>
             </receiver>
         </config-file>
