--- a/plugin.xml
+++ b/plugin.xml
@@ -33,6 +33,10 @@
         <source-file src="src/android/IntentPlugin.java" target-dir="src/com/napolitano/cordova/plugin/intent" />
         <source-file src="src/android/BarcodeReceiverProindar.java" target-dir="src/com/napolitano/cordova/plugin/intent" />
 
+        <config-file target="AndroidManifest.xml" parent="/manifest">
+          <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" tools:ignore="ProtectedPermissions"/>
+        </config-file>
+
         <config-file target="AndroidManifest.xml" parent="/manifest/application/activity">
             <intent-filter>
                 <action android:name="cl.arrigoni.mobile.ACTION_DECODE_DATA" />
