--- a/plugin.xml
+++ b/plugin.xml
@@ -33,10 +33,9 @@
         <source-file src="src/android/IntentPlugin.java" target-dir="src/com/napolitano/cordova/plugin/intent" />
         <source-file src="src/android/BarcodeReceiverProindar.java" target-dir="src/com/napolitano/cordova/plugin/intent" />
 
-        <edit-config file="AndroidManifest.xml" target="/manifest" mode="merge">
-            <manifest xmlns:tools="http://schemas.android.com/tools" />
-            <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" tools:ignore="ProtectedPermissions"/>
-        </edit-config>
+        <config-file target="AndroidManifest.xml" parent="/manifest">
+          <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
+        </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application/activity">
             <intent-filter>
