--- a/plugin.xml
+++ b/plugin.xml
@@ -34,17 +34,17 @@
         <source-file src="src/android/BarcodeReceiverProindar.java" target-dir="src/com/napolitano/cordova/plugin/intent" />
 
         <config-file target="AndroidManifest.xml" parent="/manifest">
-          <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" />
+          <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS" /> 
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application/activity">
             <intent-filter>
-                <action android:name="cl.arrigoni.mobile.ACTION_DECODE_DATA" />
+                <action android:name="com.symbol.datawedge.api.RESULT_ACTION" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <receiver android:name="BarcodeReceiverProindar">
                 <intent-filter>
-                    <action android:name="cl.arrigoni.mobile.ACTION_DECODE_DATA" /> 
+                    <action android:name="com.symbol.datawedge.api.RESULT_ACTION" /> 
                 </intent-filter>
             </receiver>
         </config-file>
